fixed small button spacing error on detail page

--- a/src/pages/kinetik+/Kinetik.css
+++ b/src/pages/kinetik+/Kinetik.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 15vh;
+  height: 20vh;
 }
 
 .kinetikDesktop {
