--- a/src/pages/ouicircles+/ouiCircles.css
+++ b/src/pages/ouicircles+/ouiCircles.css
@@ -14,8 +14,6 @@
 }
 
 .backBtn {
-  position: absolute;
-  top: 10%;
   border: none;
   background-color: transparent;
   color: white;
